# ruscv

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  PLAN.org  README.md  flake.nix  utils.mk
kernel/: .gitignore  Cargo.toml  Makefile  build.rs  rust-toolchain.toml
kernel/src/: app.rs  app_manager.rs  console.rs  entry.s  kernel.ld  main.rs  sbi.rs  sync.rs  syscall.rs  timer.rs
kernel/src/boards/: qemu.rs
kernel/src/heap/: free_list.rs  mod.rs
kernel/src/kernel_heap/: heap.rs  mod.rs
kernel/src/memory/: address.rs  frame_allocator.rs  free_list.rs  heap.rs  memory_set.rs  mod.rs  page_table.rs  temp_page.rs
kernel/src/process/: mod.rs  process_control_block.rs  status.rs  switch.s  trap.s
kernel/src/processor/: mod.rs
kernel/src/sbi/: mod.rs
kernel/src/sync/: mod.rs  up_safe_cell.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs
kernel/src/trap/: mod.rs  trap.s
kernel/src/utils/: fmt_str.rs  mod.rs
user/: Cargo.toml  Makefile
user/src/: alloc.rs  console.rs  lib.rs  linker.ld  syscall.rs
