[package]
name = "ruscv_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[[bin]]
name = "kernel"
path = "src/main.rs"

[features]
default   = ["log-error"]
log-error = []
log-warn  = ["log-error"]
log-info  = ["log-warn"]
log-debug = ["log-info"]
log-trace = ["log-debug"]
